--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@ Purchase: http://themeforest.net/user/kamleshyadav
             <div class="ast_contact_details">
               <ul>
                 <li>
-                  <i class="fa fa-phone" aria-hidden="true"></i> +1800 326 3264
+                  <i class="fa fa-phone" aria-hidden="true"></i> +1800 234 5678
                 </li>
                 <li>
                   <a href="#"
                     ><i class="fa fa-envelope-o" aria-hidden="true"></i>
-                    support@website.com</a
+                    support@zignlanguage.com</a
                   >
                 </li>
               </ul>
