--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
           <div class="">
             <div class="ast_team_box">
               <img src="https://dummyimage.com/130x130" alt="team" />
-              <h4><a href="team_single.html">Judith Travis</a></h4>
+              <h4><a href="team_single.html">David Miller</a></h4>
               <p>astrologist</p>
               <ul>
                 <li>
@@ -928,7 +928,10 @@ Purchase: http://themeforest.net/user/kamleshyadav
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-12">
             <div class="ast_heading ast_bottompadder20">
-              <h1>your <span>stories</span></h1>
+              <h1>
+                Stories at <img src="./images/logo.png" alt="" />
+                <!-- <span>stories</span> -->
+              </h1>
               <p>a description of the stories will be here</p>
             </div>
           </div>
