--- a/index.html
+++ b/index.html
@@ -357,18 +357,8 @@ Purchase: http://themeforest.net/user/kamleshyadav
           <div class="col-lg-7 col-md-12 col-sm-12 col-12">
             <div class="ast_about_info">
               <h4>know about astrology</h4>
-              <p>
-                It is a long established fact that a reader will be distracted
-                by the readable content of a page when looking at its layout.
-                The point of using Lorem Ipsum is that it has a more-or less
-                normal distribution of letters, as opposed to using 'Content
-                here, content here', making it look like readable English.
-              </p>
-              <p>
-                Many desktop publishing packages and web page editors now use
-                Lorem Ipsum as their default model text, and a search for 'lorem
-                ipsum' will uncover many web sites still in their infancy.
-              </p>
+              <p>sample paragraph one</p>
+              <p>sample paragraph two</p>
               <!-- <a href="about.html" class="ast_btn">know more</a> -->
               <a href="#" class="ast_btn">know more</a>
             </div>
@@ -738,11 +728,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
           <div class="col-lg-12 col-md-12 col-sm-12 col-12">
             <div class="ast_heading">
               <h1>About <span>David Miller</span></h1>
-              <p>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected hummer.
-              </p>
+              <p>content about you.</p>
             </div>
           </div>
           <!-- <div class="col-lg-3 col-md-6 col-sm-6 col-12">
@@ -1255,15 +1241,11 @@ Purchase: http://themeforest.net/user/kamleshyadav
           <div class="col-lg-12 col-md-12 col-sm-12 col-12">
             <div class="ast_heading">
               <h1>Download our <span>Mobile App</span></h1>
-              <p>
-                There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form, by
-                injected hummer.
-              </p>
+              <p>section for expansion or to add more content</p>
             </div>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-            <div class="ast_download_box">
+            <!-- <div class="ast_download_box">
               <ul>
                 <li>
                   <a href="#"
@@ -1282,7 +1264,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
                   /></a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -1327,11 +1309,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
             <div class="widget text-widget">
               <h4 class="widget-title">our newsletter</h4>
               <div class="ast_newsletter">
-                <p>
-                  Making it look like readable English.The point of using Lorem
-                  Ipsum is that it has a more-or less normal distribution of
-                  letters.
-                </p>
+                <p>newsletter intro if any</p>
                 <div class="ast_newsletter_box">
                   <input type="text" placeholder="Email" />
                   <button type="submit">
