proce display issue modifications

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
                 <h3>Love Story</h3>
                 <div class="ast_price">
                   <h2>$ 25</h2>
-                  <p>/ 15min</p>
+                  <p>per 15min</p>
                 </div>
                 <ul>
                   <li>
@@ -959,7 +959,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
                 <h3>Short Story</h3>
                 <div class="ast_price">
                   <h2>$ 50</h2>
-                  <p>/ 30min</p>
+                  <p>per 30min</p>
                 </div>
                 <ul>
                   <li><i class="fa fa-check" aria-hidden="true"></i>Sun</li>
@@ -981,7 +981,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
                 <h3>Your Story</h3>
                 <div class="ast_price">
                   <h2>$ 100</h2>
-                  <p>/ hour</p>
+                  <p>per hour</p>
                 </div>
                 <ul>
                   <li><i class="fa fa-check" aria-hidden="true"></i>Sun</li>
@@ -1008,7 +1008,7 @@ Purchase: http://themeforest.net/user/kamleshyadav
                 <h3>Current Story</h3>
                 <div class="ast_price">
                   <h2>$ 25</h2>
-                  <p>/ 15min</p>
+                  <p>per 15min</p>
                 </div>
                 <ul>
                   <li>
